tests/e2e/validation-webhook/deny/match/valid/policy.yaml
# yaml-language-server: $schema=../../../../../../.schemas/json/authorizationpolicy-envoy-v1alpha1.json
apiVersion: envoy.kyverno.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: valid
spec:
  deny:
  - match: >
      false
    response: >
      envoy
        .Denied(403)
        .WithBody("Unauthorized Request")
        .Response()
